--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
         }
     }
 
+    viewBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
@@ -84,5 +88,10 @@ dependencies {
 
     // tableView
     implementation "ph.ingenuity.tableview:tableview:0.1.0-alpha"
+
+    implementation 'com.google.firebase:firebase-analytics:17.4.1'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    // Firebase Authentication (Kotlin)
+    implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
 
 }
