--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,11 @@ android {
         }
     }
 
+
+    dataBinding {
+        enabled = true
+    }
+
     viewBinding {
         enabled = true
     }
@@ -101,4 +106,8 @@ dependencies {
     // Firestore (Kotlin)
     implementation 'com.google.firebase:firebase-firestore-ktx:21.4.3'
 
+    // Stetho (View Room database)
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+
+    kapt 'com.android.databinding:compiler:2.3.1'
 }
